<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textColor="#666666"
                android:textColorHint="#666666">

                <EditText
                    android:id="@+id/name_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_next"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#666666" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_layout"
                android:textColor="#666666"
                android:textColorHint="#666666">

                <EditText
                    android:id="@+id/email_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_next"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#666666" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_layout"
                android:textColor="#666666"
                android:textColorHint="#666666">

                <EditText
                    android:id="@+id/phone_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_phone"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_next"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#666666" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_layout"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <Spinner
                android:id="@+id/feedback_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/country_spinner"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />


            <EditText
                android:id="@+id/comment_view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/feedback_type_spinner"
                android:background="@drawable/round_shape_clicked"
                android:hint="@string/hint_comment"
                android:maxLines="8"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="#333333"
                android:textColorHint="#333333"
                android:textSize="14sp" />
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/primary_hue1"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/text_submit"
        android:textColor="#ffffff"
        android:textSize="14sp" />
</RelativeLayout>